<?xml version="1.0"?>
<package format="2">
  <name>tf_republisher_clock</name>
  <version>0.0.0</version>
  <description>The tf_republisher_clock package</description>
  <maintainer email="57326251+skasts@users.noreply.github.com">Simon Kast</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
