<?xml version="1.0"?>
<package format="2">
  <name>tf_republisher_clock</name>
  <version>0.0.1</version>
  <description>The tf_republisher_clock package</description>

  <maintainer email="skasts@todo.todo">skasts</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
